# gather

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  deny.toml  justfile
.chglog/: config.yml
.crumbs/: add-file-existence-pre-validation-before-the-processing-loop.md  add-integration-test-for-serial-flag-end-to-end.md  add-repository-and-keywords-to-cargo-toml-metadata.md  add-unit-tests-for-check-directory-and-log-build.md  change-dry-run-short-flag-from-r-to-n-conventional.md  cli-rs-remove-redundant-hide-false-num-args-0-and-commented.md  crumbs.toml  detect-same-basename-collisions-at-target.md  document-or-fix-last-true-default-value-silent-wrong-directo.md  dry-run-output-silenced-by-q-same-root-cause-as-gtr-b6p.md  extract-per-file-processing-logic-into-a-dedicated-function.md  extract-summary-flag-to-local-bool-before-the-loop-inconsist.md  fix-changelog-structure-drift.md  fix-conflicting-required-true-manual-default-fallback-for-ta.md  fix-typo-in-utils-rs-procceeding-should-be-proceeding.md  index.csv  log-build-should-return-builder-is-consumed-internally-by-in.md  modernize-fn-main-to-return-result-and-fix-string-as-str-pat.md  parallelize.md  quiet-mode-silently-defeats-print-summary-p-flag.md  refactor-check-directory-to-use-the-operator-and-map-err.md  remove-empty-features-section-from-cargo-toml.md  remove-replace-workaround-from-error-formatting-in-main.md  replace-box-dyn-error-with-anyhow-error-for-richer-error-con.md  replace-err-to-string-replace-in-main-with-eprintln-err.md  set-wildcards-warn-in-deny-toml-currently-allow.md  use-get-flag-instead-of-value-source-some-commandline-for-bo.md
docs/plans/: 2026-07-03-anyhow-migration.md  2026-07-03-extract-process-file.md
src/: cli.rs  main.rs  utils.rs
tests/: cli.rs
