[package]
name = "gather"
version = "0.2.1"
description = "Gathers files from directories and subdirectories into a target directory."
license = "Apache-2.0"
authors = ["evensolberg <even.solberg@gmail.com>"]
edition = "2021"
include = ["src/**/*", "README.md"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.14", features = ["cargo", "color"] }
env_logger = "0.9.0"
log = "0.4.14"

[features]
