[package]
name = "gather"
version = "0.2.3"
description = "Gathers files from directories and subdirectories into a target directory."
license = "Apache-2.0"
authors = ["evensolberg <even.solberg@gmail.com>"]
edition = "2021"
include = ["src/**/*", "README.md"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.45", features = ["cargo", "env", "wrap_help"] }
env_logger = "0.11.8"
log = "0.4.27"

[features]
