[package]
name = "gather"
version = "0.3.1"
description = "Gathers files from directories and subdirectories into a target directory."
license = "Apache-2.0"
authors = ["evensolberg <even.solberg@gmail.com>"]
edition = "2021"
include = ["src/**/*", "README.md"]
repository = "https://github.com/evensolberg/gather"
keywords = ["gather", "files", "copy", "move", "cli"]
categories = ["command-line-utilities", "filesystem"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.6.1", features = ["cargo", "env", "wrap_help"] }
env_logger = "0.11.10"
log = "0.4.32"

[dev-dependencies]
tempfile = "3"
